<resources>
    <string name="app_name">Fitness Helper</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="main_text">\t\tЭто фитнес приложение Fitness Helper. В нем вы можете выбрать две категории: бег или упражнения.\n
         \t\tВ категории Бег Вы можетет увидеть: расстояние, которое вы преодалели, среднюю скорость и длительность вашего бега.\n
         \t\tВ категории Упражнения Вы можете: выбрать нужное упражниние, выбрать количество подходов, отдых между ними и время выполнения."</string>
    <string name="ran">Бег</string>
    <string name="exercise">Упражнения</string>
    <string name="pres">Пресс</string>
    <string name="otj_back">Обратные отжимания</string>
    <string name="otj_koleni">Отжимания</string>
    <string name="planka">Планка</string>
    <string name="podtiag">Подтягивание</string>
    <string name="ruki">Разведение рук</string>
    <string name="skakalka">Прыжки со скакалкой</string>
    <string name="spina">Спина</string>
    <string name="voshod">Восхождение</string>
    <string name="vupad">Выпады</string>
    <string name="start">Установить таймер</string>
    <string name="str">Начать тренировку</string>
    <string name="performance">Время выполнения</string>
    <string name="rest">Время отдыха\nмежду подходами</string>
    <string name="approaches">Количество подходов</string>
    <string name="value_exercise">Количество выбранных упражнений</string>
    <string name="rest_between_circle">Отдых между\nупражнениями</string>
    <string name="set_timer">Настройка таймера</string>
    <string name="value">0</string>
    <string name="minutes">минуты</string>
    <string name="seconds">секунды</string>
    <string name="value_repeat">от 1 до 9</string>
    <string name="stop">Заново</string>
    <string name="Choice">Выбор упражнения</string>
    <string name="finish">Завершить</string>
    <string name="end">Поздравляю Вы завершили тренировку</string>
    <string name="start_training">Cтарт</string>
    <string name="distance">Дистанция(км)</string>
    <string name="time_run">Время</string>
    <string name="running_speed">Темп(мин/км)</string>
    <string name="template_speed_time">00:00</string>
    <string name="template_distance">0,00</string>
    <string-array name="listexercise">
        <item>Обратные отжимания</item>
        <item>Отжимания</item>
        <item>Планка</item>
        <item>Подтягивание</item>
        <item>Разведение рук</item>
        <item>Пресс</item>
        <item>Прыжки со скакалкой</item>
        <item>Спина</item>
        <item>Восхождение</item>
        <item>Выпады</item>
    </string-array>

</resources>
