<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#deebed"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/view_exercise"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:background="@drawable/vupadu"
        android:contentDescription="@string/vupad" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:textSize="50sp"/>

    <Button
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounding_button"
        android:text="@string/stop"
        android:textColor="#fff" />

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounding_button"
        android:text="@string/finish"
        android:textColor="#fff" />


</LinearLayout>
   